# STREAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
CircuitEquation/: DYON_vs_STREAM_kretsparametrar.m  cmpFromSim.py  solver.py
DYON_tests/: CompareDyonToSTREAM.py  Overlap.py  TestDYON.py  TestDYON_2part.py  TestDYON_2part2.py  TestDYON_basic.py  TestSTREAM_tritium.py  analyze.txt  checkPYDYON.py  eqsys.txt  plotEvol.py  plotJacobian.py  testing1.py
Ida/: TestDYON.py
Ida py script/: FirstTestDYON.py
doc/notes/: AmperesLaw.tex  elongatedplasma.tex  notes.cls  ref.bib  startup.tex
examples/Deuterium_Burn-through/: PlasmaParameters.py  checkPYDYON.py  checkPrad.py  pydyon.py  run.py
examples/Deuterium_Burn-through/Basic/: checkPrad.py  plotPower.py  pydyon.py  run.py
examples/Deuterium_Burn-through/Runaway/: run.py
examples/Deuterium_Burn-through/RunawayKinetic/: .gdb_history  analyze.txt  run.py
examples/Deuterium_Burn-through/RunawayKinetic_REgrid/: run.py
examples/Deuterium_Burn-through/Runaway_Injection/: run.py
examples/Deuterium_Burn-through/Runaway_UncertaintySweep/: analyzeSweep.py  run.py
examples/Deuterium_Burn-through/Runaway_UncertaintySweep/DataUncertaintySweep/: RunawayLoss.csv  RunawayLossWithAvalanche.csv  peakvalueNre.csv  tThreshold.csv  uncertaintyfactor.csv
examples/ECH/: run.py
examples/ECH/Kim2020/: run.py
examples/ECH/TCV/: TestH5.py  autoTCV.py  run.py
examples/ITER-like_wall_Burn-through/: run2.py
examples/Kim2020/: checkPYDYON.py  pydyon.py  pydyonJET.py  run.py
examples/Kim2020/ITERcase/: ITER_figure8.fig  checkPYDYON.py  pydyon.py  pydyonJET.py  run.py
examples/Kim2020/ITERcase/Data/: ConfinementTime_STREAM.csv  ConnectionLength_DYON.csv  ConnectionLength_STREAM.csv  ElectronDensity_STREAM.csv  ElectronTemperature_DYON.csv  ElectronTemperature_STREAM.csv  IonTemperature_STREAM.csv  PlasmaCurrent_STREAM.csv  time_STREAM.csv
examples/Kim2020/ITERcase/DyonData/: ConfinementTime_DYON.csv  PlasmaCurrent_DYON.csv  (+2 more)
examples/Kim2020/JETcase/: CompareDyonToSTREAM.py  pydyonJET.py  run.py
examples/Runaway/: run.py
examples/Runaway_Kavin2017/: run.py
examples/Runaway_Kim2020/: run.py
examples/Tritium/: run.py
examples/Tritium/Basic/: run.py
examples/Tritium/Runaway/: PlasmaParameters.py  run.py
examples/deVries2020/: run.py
examples/simulations/: ITERbaseline.py  plotSeeding.py  simulations.py
iface/: CMakeLists.txt  Main.cpp
include/: stream.h.in
include/STREAM/: EquationSystem.hpp  OtherQuantityHandler.hpp  stream.h
include/STREAM/Equations/: ChargeExchangeTerm.hpp  Coefficients.hpp  ConfinementTime.hpp  ConnectionLength.hpp  DistributionParallelTransport.hpp  ElectronCyclotronHeating.hpp  ElectronHeatTransport.hpp  ElectronHeatTransportDiffusion.hpp  ElectronTransportDiffusion.hpp  IonHeatTransport.hpp  IonHeatTransportDiffusion.hpp  IonHeatTransportDiffusion1D.hpp  IonRateEquation.hpp  IonSourceTerm.hpp  IonTransport.hpp  IonTransportDiffusion.hpp  IonTransportDiffusion1D.hpp  MeanFreePathTerm.hpp  NeutralInflux.hpp  NeutralTransport.hpp  OpticalThickness.hpp  PlasmaVolume.hpp  RadiatedPowerTerm.hpp  RunawayElectronConfinementTime.hpp  RunawayElectronTransport.hpp  SputteredRecycledCoefficient.hpp
include/STREAM/Grid/: EllipticalRadialGridGenerator.hpp
include/STREAM/Settings/: OptionConstants.enum.hpp  OptionConstants.hpp  SimulationGenerator.hpp
py/PYDYON/: ADAS.h5  ADAS.py  Conductivity.py  ConfinementTime.py  IonHandler.py  NIST.py  NIST_ioniz.h5  PlasmaVolume.py  STREAM.py  Simulation.py  SimulationResult.py  UnknownQuantityHandler.py  __init__.py  fromSTREAM.py
py/PYDYON/Equations/: Circuit.py  DeuteriumAtomBalance.py  DeuteriumInflux.py  DeuteriumIonBalance.py  IonInflux.py  IonParticleBalance.py  IonTransport.py  PowerChargeExchange.py  PowerConvectiveElectron.py  PowerConvectiveIon.py  PowerEquilibration.py  PowerOhmic.py  PowerRadiated.py  RadiatedPower.py  __init__.py
py/STREAM/: STREAMException.py  STREAMOutput.py  STREAMSettings.py  __init__.py  runiface.py
py/STREAM/Output/: IonHandler.py  IonSpecies.py  IonState.py  MeanFreePath.OLD.py  MeanFreePath.py
py/STREAM/Settings/: ConfinementTime.py  EquationSystem.py  OtherQuantities.py  RadialGrid.py  TransportSettings.py
py/cli/: cli.py  debug.py
setup/: build.lac10.sh  build.spcsrv26.sh  environment.lac10.sh  environment.spcsrv26.sh
src/: CMakeLists.txt  EquationSystem.cpp  OtherQuantityHandler.cpp
src/Equations/: ChargeExchangeTerm.cpp  ConfTimeSave.cpp  ConfinementTime.cpp  ConnectionLength.cpp  DistributionParallelTransport.cpp  ElectronCyclotronHeating.cpp  ElectronHeatTransport.cpp  ElectronHeatTransportDiffusion.cpp  ElectronTransportDiffusion.cpp  IonHeatTransport.cpp  IonHeatTransportDiffusion.cpp  IonHeatTransportDiffusion1D.cpp  IonHeatTransportDiffusion3D.cpp  IonRateEquation.cpp  IonRateEquation.set.cpp  IonRateEquation.setDL.cpp  IonRateEquation.setDN.cpp  IonRateEquation.setDNI.cpp  IonRateEquation.setDT.cpp  IonRateEquation.setDTINI.cpp  IonRateEquation.setDWI.cpp  IonSourceTerm.cpp  IonTransport.cpp  IonTransportDiffusion.cpp  IonTransportDiffusion1D.cpp  MeanFreePathTerm.cpp  NeutralInflux.cpp  NeutralTransport.cpp  OpticalThickness.cpp  PlasmaVolume.cpp  RadiatedPowerTerm.cpp  RunawayElectronConfinementTime.cpp  RunawayElectronTransport.cpp  SputteredRecycledCoefficient.cpp
src/Equations/save/: ConfinementTime.cpp
src/Grid/: EllipticalRadialGridGenerator.cpp
src/Settings/: Constants.cpp  DefineOptions.cpp  ElectricField.cpp  EquationSystem.cpp  Grid.cpp  Heat.cpp  Ions.cpp  LoadPrescribedData.cpp  MeanFreePath.cpp  OtherQuantityHandler.cpp  Process.cpp  Transport.cpp  f_hot.cpp  f_re.cpp  n_re.cpp
(+19 files in other folders)
